<resources>
    <string name="app_name">Custom Alert Dialog</string>
    <string name="open_dialog">Click Here to Open Dialog</string>
    <string name="alertdialog_title">AlertDialog Title</string>
    <string name="button_3">Button-3</string>
    <string name="button_2">Button-2</string>
    <string name="button_1">Button-1</string>
    <string name="dialog_body">Please select Any Button</string>
    <string name="button_4">Button-4</string>
    <string name="cancel">Cancel</string>
</resources>
